Adding some more stuff for practice

--- a/index.html
+++ b/index.html
@@ -20,3 +20,4 @@
 		</html>
         <p>Meow! Meow! Meow!</p>
         <p>Just messing around! hehe</p>
+        <p>Adding some more stuff here for practice.</p>
