--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
-		<html>
-		  <head>
-			<meta charset="utf-8">
-			<meta name="viewport" content="width=device-width">
-			<title>My Profile</title>
-		  </head>
-		  <body>
-			<div align="center">
-				<h1>Julian Alvir</h1>
-				<h2>Software Developer</h2>
-				<hr>
-				<h3>About Me:</h3>
-					<h4>My hometown is San Francisco.</h4>
-					<h4>My favorite color is navy blue.</h4>
-					<h4>My favorite food is pizza.</h4>
-					<h4>If I could be any animal, I would be a dragon.</h4>
-			</div>
-		  </body>
-		</html>
-        <p>Meow! Meow! Meow!</p>
-        <p>Just messing around! hehe</p>
-        <p>Adding some more stuff here for practice.</p>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>repl.it</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <div id="pic">
+      <img src="http://place-puppy.com/500x150" alt="Puppy Banner">
+    </div>
+    <div id="icons">
+      <!-- TODO: spans for icons -->
+      <span>ICON</span>
+      <span>ICON</span>
+      <span>ICON</span>
+      <span>ICON</span>
+      <span>ICON</span>
+      <span>ICON</span>
+    </div>
+    <div id="mini-layout">
+      <!-- TODO: Spans for 4 item wide mini-layout -->
