added mini layouts

--- a/index.html
+++ b/index.html
@@ -19,5 +19,63 @@
       <span>ICON</span>
       <span>ICON</span>
     </div>
-    <div id="mini-layout">
-      <!-- TODO: Spans for 4 item wide mini-layout -->
+	<div id="mini-layout">
+		<span>
+		  <div>
+			<img src="http://placekitten.com/100/100" alt="Kitten Pic">
+		  </div>
+		  <div>
+			<strong>Cute Kitty</strong>
+		  </div>
+		  <div>
+			<p>So photogenic!</p>
+		  </div>
+		  <div>
+			<a href="http://placekitten.com">More Cats</a>
+		  </div>
+		</span>
+		<span>
+		  <div>
+			<img src="http://place-puppy.com/100x100" alt="Dog Pic">
+		  </div>
+		  <div>
+			<strong>Silly Puppy</strong>
+		  </div>
+		  <div>
+			<p>So curious!</p>
+		  </div>
+		  <div>
+			<a href="http://place-puppy.com">More Dogs</a>
+		  </div>
+		</span>
+		<span>
+			<div>
+			  <img src="http://placekitten.com/100/100" alt="Kitten Pic">
+			</div>
+			<div>
+			  <strong>Cute Kitty</strong>
+			</div>
+			<div>
+			  <p>So photogenic!</p>
+			</div>
+			<div>
+			  <a href="http://placekitten.com">More Cats</a>
+			</div>
+		  </span>
+		  <span>
+			<div>
+			  <img src="http://place-puppy.com/100x100" alt="Dog Pic">
+			</div>
+			<div>
+			  <strong>Silly Puppy</strong>
+			</div>
+			<div>
+			  <p>So curious!</p>
+			</div>
+			<div>
+			  <a href="http://place-puppy.com">More Dogs</a>
+			</div>
+		  </span>
+	  </div>
+	</body>
+  </html>
